bug #269